# Graphics_with_OpenGL

./: CMakeLists.txt  Dependency.cmake  README.md  imgui.ini
shader/: lighting.fs  lighting.vs  simple.fs  simple.vs
src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  image.cpp  image.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  vertex_layout.cpp  vertex_layout.h
